--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.488.0",
     "body-parser": "^1.19.0",
-    "dynamodb": "^1.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "joi": "^14.3.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
