--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.488.0",
     "body-parser": "^1.19.0",
+    "dynamoose": "^1.10.0",
     "express": "^4.17.1",
     "joi": "^14.3.1"
   },
